update environment configuration and add project README

--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-MONGO_URL=mongodb://localhost:27017
-MONGO_DB_NAME=meu_crm
+MONGO_URL=mongodb+srv://fmelo7:zNfokr3CAaGEfX2S@cluster0.bcqvd84.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+MONGO_DB_NAME=contatos
